--- a/AML/Resources/GaussianProcess.tex
+++ b/AML/Resources/GaussianProcess.tex
@@ -1,15 +1,13 @@
 % -*- root: Main.tex -*-
 \section{Gaussian Processes}
-$f\sim GP(\mu,k)\Rightarrow\forall \left\{x_1, \dots, x_n\right\} \,\forall n < \infty$\\
-$\left[f(x_1)\dots f(x_n)\right]\sim N(\left[\mu(x_1)\dots \mu(x_n)\right], K)$\\ where $K_{ij}=k(x_i,x_j)$
-% A GP $\{X_t\}_t$ is a collection of random variables from which any finite sample has a joint Gaussian distribution.\\
-% For any finite set of points $T=\{t_1, \dots, t_n\}$ from a GP, it hold that $(X_{t_1}, \dots,X_{t_n})\sim \mathcal{N}(\pmb{\mu_T},\pmb{\Sigma_T})$ with $\pmb{\mu_T} = (\mu(t_1),\dots,\mu(t_n))$, $\pmb{\Sigma_T}(i,j)=k(X_{t_i},X_{t_j})$
-\subsection*{Gaussian Process Regression}
-$f\sim GP(\mu,k)$ then: $f\vert y_{1:n},x_{1:n} \sim GP(\tilde{\mu},\tilde{k})$\\
-$\tilde{\mu}(z) = \mu(z) + K_{D, z}^T{(K_{DD}+\epsilon I_n)}^{-1}\left(y_{1:n}-\mu({x_{1:n})}\right)$\\
-$\tilde{k}(z_1,z_2) = k(z_1,z_2) - K_{D, z_1}^T{(K_{DD}+\epsilon I_n)}^{-1} K_{D, z_2}$\\
-Where: $K_{D,z} = {\left[k(x_1,z)\dots k(x_n,z)\right]}^T$\\
-${\left[K_{DD}\right]}_{ij} = k(x_i, x_j)$
+
+$p(y_{n+1}|x_{n+1},X, y) = \mathcal{N} (y_{n+1}|\mu_{y_{n+1}}, \sigma_{y_{n+1}}^2)$
+\\$\mu_{y_{n+1}} = k^T C_{n}^{-1}y= k^T(K+\sigma^2 I)^{-1}y$
+\\$\sigma_{y_{n+1}}^2 = c - k^TC_n^{-1}k$
+\\ $C_n = K + \sigma^2I$
+\\ $c = k(x_{n+1},x_{n+1}) + \sigma^2$
+\\ $k =(x_{n+1},X) \;,  K= (X,X)$
+
 
 
 %$p\big(\begin{bmatrix}
@@ -33,19 +31,27 @@ ${\left[K_{DD}\right]}_{ij} = k(x_i, x_j)$
 %Set of hyperparameters $\theta$ determine parameters $C_n$. Gradient descent: $\nabla_{\theta_i}l(Y|\theta) = -\frac{1}{2}tr(C_n^{-1} \frac{\partial C_n}{\partial \theta_i}) + \frac{1}{2} Y^T C_n^{-1} \frac{\partial C_n}{\partial \theta_i} C_n^{-1} Y$
 
 \subsection{Kernels}
+    A function $k: \mathcal{X} \times \mathcal{X}$ is a kernel if : $k(x_1,x_2) = \big<\phi(x_1),\phi(x_2)\big>$
+        
 	$k(x,y)$ is a kernel if it's symmetric semidefinite positive:\\
 	$\forall \left\{x_1, \dots, x_n \right\}$ then for the Gram Matrix \\
 	${\left[K\right]}_{ij}=k(x_i,x_j)$ holds $c^TKc\geq0\forall c$\\
-	Closure Properties: {\tiny psd prop. closed under pointwise limits (since each $K_n$ is a kernel)} \\
+	Closure Properties: \\
     $k(x,y) = k_1(x,y) + k_2(x,y)$, $k(x,y) = k_1(x,y)k_2(x,y)$\\
 	$k(x,y) = f(x)f(y)$, $k(x,y) = k_3(\phi(x),\phi(y))$\\
     $k(x,y) = \exp(\alpha k_1(x,y)), \alpha > 0$, $|X \cap Y| = kernel$\\
-	$k(x,y) = p(k_1(x,y)), \, p(\cdot)$ {\tiny\text{polynomial with pos. coeff.}}\\   
+	$k(x,y) = p(k_1(x,y)), \, p(\cdot)$ \\   
 	$k(x,y)=k_1(x,y)/ \sqrt{(k_1(x,x) k_1(y,y)}$\\
-	Gaussian (rbf): $k(x,y) = \exp( -\tfrac{||x-y||^2}{2\sigma^2})$ {\tiny inf.dim.}\\
-	Sigmoid: $k(x,y) = \tanh(k\cdot x^Ty - b)$ {\tiny\text{not valid for $\forall k,b$}} \\
+	Gaussian (rbf): $k(x,y) = \sigma^2 \exp( -\tfrac{||x-y||^2}{2\l^2})$ \\
+	Sigmoid: $k(x,y) = \tanh(k\cdot x^Ty - b)$  \\
 	Polynomial: $k(x,y) {=} (x^Ty {+} c)^d$,$d\in N$,$c\geq0$ \\
-	Periodic: $k(x,y) = \sigma ^2 exp(\frac{2\sin ^2 (\pi |x-y|/p)}{\ell ^2})$
+	Periodic: $k(x,y) = \sigma ^2 exp(-\frac{2\sin ^2 (\pi |x-y|/p)}{\ell ^2})$
+	\\Linear: $k(x,y) = \sigma_b^2 + \sigma^2(x-c)(y-c) = xy$\\
+	Rational Quadratic: $k(x, y) = \sigma^2(1+\frac{(x-y)^2}{2\alpha l^2})^{-\alpha} \rightarrow RBF$
+	\subsection{Kernel Properties}
+	$k(u,u) \geq 0 \; \;\forall u$\\
+	$k(u,v)^2 \leq k(u,u)k(v,v) \; \; \forall u,v$\\
+	$\binom{n+k-1}{k}$ Comb. w rep. $\binom{n+d}{d}$ poly kernel
 
 % \subsubsection*{Polynomial kernel}
 % $k_1 = (x^Ty)^m$ represents monomial of deg m \\
